--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                             <a class="nav-link" href="#">Login</a>
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Usuario</a>
                             <div class="position-absolute end-0">
-                                <form class="d-flex miForm" role="search" id="buscar_n" action="" target="_blank">
-                                    <input class="form-control me-2" id="entrada_buscador" type="search" placeholder="Google" aria-label="Search">
-                                    <button class="btn btn-outline-success miBoton" id="comenzar_busqueda" type="submit">Buscar</button>
+                                <form class="d-flex miForm" role="search" action="http://www.google.com" target="_blank">
+                                    <input class="form-control me-2" type="search" placeholder="Google" aria-label="Search">
+                                    <button class="btn btn-outline-success miBoton" type="submit">Buscar</button>
                                 </form>
                             </div>
                         </div>
@@ -219,6 +219,6 @@
         </footer>
 
         <script src="bootstrap/bootstrap.min.js"></script>
-        <script src="busqueda.js"></script>
+        <!-- <script src="busqueda.js"></script> -->
     </body>
 </html>
