Agregue el sticky-top

--- a/argentina.html
+++ b/argentina.html
@@ -11,8 +11,8 @@
     <title>Argentina</title>
 </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-md miNavbar navbar-dark sticky-top">
+        <header class="sticky-top">
+            <nav class="navbar navbar-expand-md miNavbar navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="http://www.ispc.edu.ar" target="_blank">
                         <img src="imagenes/ispc.png" alt="Logo ISPC" width="80" title="Link al ISPC">
