--- a/argentina.html
+++ b/argentina.html
@@ -70,9 +70,9 @@
                         <div class="imagenContenido">
                             <img class="imagen" src="imagenes/bandera-argentina.PNG" alt="Bandera Argentina" title="Bandera Argentina" width="80%">
                         </div>
-                        <div>
+                        <div class="embed-container">
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrolling="no"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" allowfullscreen width="100%" scrolling="no"></iframe>
 
                             </p>
                         </div>
