--- a/argentina.html
+++ b/argentina.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="embed-container">
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" allowfullscreen width="100%" scrolling="no"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
