--- a/argentina.html
+++ b/argentina.html
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes/bandera-argentina.PNG" alt="Bandera Argentina" title="Bandera Argentina" width="80%">
+                            <img class="imagen" src="imagenes_argentina/minas_wanda.PNG" alt="Minas Wanda" title="Minas Wanda, Misiones" width="80%">
                         </div>
                         <div class="embed-container">
                             <p class="parrafoContenido">
@@ -86,11 +86,11 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes/bandera-argentina.PNG" alt="Bandera Argentina" title="Bandera Argentina" width="80%">
+                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu_rio.PNG" alt="parque_nacional_iguazu_rio" title="Parque Nacional Iguazú, río" width="80%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrolling="no"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -108,11 +108,11 @@
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes/bandera-argentina.PNG" alt="Bandera Argentina" title="Bandera Argentina" width="80%">
+                            <img class="imagen" src="imagenes_argentina/cerro_14_colores_humahuaca.PNG" alt="cerro_14_colores_humahuaca" title="Cerro 14 colores humahuaca" width="80%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrolling="no"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -126,11 +126,11 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes/bandera-argentina.PNG" alt="Bandera Argentina" title="Bandera Argentina" width="80%">
+                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.png" alt="Parque Nacional Iguazú" title="Parque Nacional Iguazú" width="80%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrolling="no"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
