--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                                         <img src="imagenes/cataratas-del-iguazu.jpg" alt="Imagen de Argentina" class="d-block w-100" title="Cataratas del Iguazú, Argentina">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="imagenes/cataratas-del-iguazu.jpg" alt="Imagen de Argentina" class="d-block w-100" title="Cataratas del Iguazú, Argentina">
+                                        <img src="imagenes_argentina/parque_nacional_iguazu.PNG" alt="Imagen de Argentina" class="d-block w-100" title="Cataratas del Iguazú, Argentina">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="imagenes/cataratas-del-iguazu.jpg" alt="Imagen de Argentina" class="d-block w-100" title="Cataratas del Iguazú, Argentina">
+                                        <img src="imagenes_argentina/parque_nacional_iguazu_rio.PNG" alt="Imagen de Argentina" class="d-block w-100" title="Cataratas del Iguazú, Argentina">
                                     </div>                
                                 </div>
                             </div>
