--- a/argentina.html
+++ b/argentina.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.png" alt="Parque Nacional Iguazú" title="Parque Nacional Iguazú" width="80%">
+                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.PNG" alt="Parque Nacional Iguazú" title="Parque Nacional Iguazú" width="80%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
