--- a/infoArgentina-1.html
+++ b/infoArgentina-1.html
@@ -1,8 +1,26 @@
 <html>
-    <body>
-            <!-- El texto no debe exceder los 640 caracteres incluyendo los espacios y signos de puntuación -->
-        <p style="color: yellow; text-align: justify;">
+    <head>
+        <style>
+        
+            .barraParrafoContenido::-webkit-scrollbar{
+                width: 7px;
+            }
+            .barraParrafoContenido::-webkit-scrollbar-thumb{
+                background: #441454;
+                border-radius: 5px;
+            }
+            
+        </style>
+    </head>
+    <body class="barraParrafoContenido">
+        <p style="color: yellow; text-align: justify; ">
             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
+             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
+             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
+             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
              accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
              accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
