--- a/presentacion.html
+++ b/presentacion.html
@@ -49,8 +49,8 @@
 						</div>
 						<!--  -->
 						<a class="nav-link" href="presentacion.html" target="_self">Nosotros</a>
-						<a class="nav-link" href="#">Registro</a>
-						<a class="nav-link" href="#">Usuario</a>
+						<!-- <a class="nav-link" href="#">Registro</a> -->
+						<!-- <a class="nav-link" href="#">Login</a> -->
 						<!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Usuario</a> -->
 						<div class="position-absolute end-0">
 							<form class="d-flex miForm" role="search" action="http://www.google.com" target="_blank">
