--- a/argentina.html
+++ b/argentina.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Argentina</title>
+
 </head>
     <body>
         <header class="sticky-top">
@@ -47,9 +48,9 @@
                                 </div>
                             </div>
                             <!--  -->
-                            <a class="nav-link" href="presentacion.html" target="_self">Nosotros</a>
-                            <a class="nav-link" href="#">Registro</a>
-                            <a class="nav-link" href="#">Usuario</a>
+                            <!-- <a class="nav-link" href="presentacion.html" target="_self">Nosotros</a> -->
+                            <!-- <a class="nav-link" href="#">Registro</a> -->
+                            <!-- <a class="nav-link" href="#">Login</a> -->
                             <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Usuario</a> -->
                             <div class="position-absolute end-0">
                                 <form class="d-flex miForm" role="search" action="http://www.google.com" target="_blank">
@@ -65,28 +66,29 @@
         <!-- -------------------------Contenido-------------------------- -->
         <section>
             <div class="container-fluid">
+                <p class="miTitulo text-white text-center display-4 fw-bold"><strong>ARGENTINA</strong></p>
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/minas_wanda.PNG" alt="Minas Wanda" title="Minas Wanda, Misiones" width="80%">
+                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu_rio.PNG" alt="Parque Nacional Iguazu, rio" title="Parque Nacional Iguazu, rio" width="95%">
                         </div>
-                        <div class="embed-container">
+                        <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" ></iframe>
 
                             </p>
                         </div>
                         <div class="divformContenido d-flex align-content-center align-items-center ps-3">
-                            <label class="labelContenido" for="check">Has este lugar tu favorito</label>
+                            <label class="labelContenido" for="check1" >Has este lugar tu favorito</label>
                             <form action="" name="check">
                                 
-                                <input class="inputContenido d-flex ms-3"type="checkbox">
+                                <input class="inputContenido d-flex ms-3 disabled" type="checkbox" id="check1" aria-disabled="true">
                             </form>
                         </div>
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu_rio.PNG" alt="parque_nacional_iguazu_rio" title="Parque Nacional Iguazú, río" width="80%">
+                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.PNG" alt="Parque Nacional Iguazu" title="Parque Nacional Iguazu" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
@@ -108,7 +110,7 @@
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/cerro_14_colores_humahuaca.PNG" alt="cerro_14_colores_humahuaca" title="Cerro 14 colores humahuaca" width="80%">
+                            <img class="imagen" src="imagenes_argentina/cerro_14_colores_humahuaca.PNG" alt="Cerro 14 Colores, Umahuaca" title="Cerro 14 Colores, Umahuaca" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
@@ -126,11 +128,11 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.PNG" alt="Parque Nacional Iguazú" title="Parque Nacional Iguazú" width="80%">
+                            <img class="imagen" src="imagenes_argentina/minas_wanda.PNG" alt="Minas Wanda, Misiones" title="Minas Wanda, Misiones" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrollable="true"></iframe>
 
                             </p>
                         </div>
