--- a/brasil.html
+++ b/brasil.html
@@ -40,7 +40,7 @@
                                 <a class="dropdown-item" href="argentina.html" target="_self">Argentina</a>
                                 <a class="dropdown-item" href="#">México</a>
                                 <!-- <hr class="dropdown-divider"> -->
-                                <a class="dropdown-item" href="#">Brasil</a>
+                                <a class="dropdown-item" href="brasil.html" target="_self">Brasil</a>
                                 <a class="dropdown-item" href="#">Perú</a>
                                 <a class="dropdown-item" href="#">Egipto</a>
                                 <a class="dropdown-item" href="#">Italia</a>
@@ -66,15 +66,16 @@
         <!-- -------------------------Contenido-------------------------- -->
         <section>
             <div class="container-fluid">
-                <p class="miTitulo text-white text-center display-4 fw-bold"><strong>ARGENTINA</strong></p>
+                <p class="miTitulo text-white text-center display-4 fw-bold"><strong>BRASIL</strong></p>
+                <p class="miTitulo text-white text-center display-6 fw-bold"><strong>Destinos recomendados</strong></p>
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu_rio.PNG" alt="Parque Nacional Iguazu, rio" title="Parque Nacional Iguazu, rio" width="95%">
+                            <img class="imagen" src="imagenes_brasil/sao_paulo.PNG" alt="Sao Paulo" title="Sao Paulo" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" ></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%" ></iframe>
 
                             </p>
                         </div>
@@ -88,11 +89,11 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/parque_nacional_iguazu.PNG" alt="Parque Nacional Iguazu" title="Parque Nacional Iguazu" width="95%">
+                            <img class="imagen" src="imagenes_brasil/rio_de_janeiro.PNG" alt="Rio de Janeiro" title="Rio de Janeiro" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -110,11 +111,11 @@
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/cerro_14_colores_humahuaca.PNG" alt="Cerro 14 Colores, Umahuaca" title="Cerro 14 Colores, Umahuaca" width="95%">
+                            <img class="imagen" src="imagenes_brasil/fernando_de_noronha.PNG" alt="Fernando de Noronha" title="Fernando de Noronha" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -128,11 +129,11 @@
                     </div>
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
-                            <img class="imagen" src="imagenes_argentina/minas_wanda.PNG" alt="Minas Wanda, Misiones" title="Minas Wanda, Misiones" width="95%">
+                            <img class="imagen" src="imagenes_brasil/florianopolis.PNG" alt="Florianópolis" title="Florianópolis" width="95%">
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoArgentina-1.html" frameborder="0" width="100%" scrollable="true"></iframe>
+                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
