--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <a class="dropdown-item" href="argentina.html" target="_self">Argentina</a>
                                 <a class="dropdown-item" href="#">México</a>
                                 <!-- <hr class="dropdown-divider"> -->
-                                <a class="dropdown-item" href="brasil.html">Brasil</a>
+                                <a class="dropdown-item" href="brasil.html" target="_self">Brasil</a>
                                 <a class="dropdown-item" href="#">Perú</a>
                                 <a class="dropdown-item" href="#">Egipto</a>
                                 <a class="dropdown-item" href="#">Italia</a>
@@ -213,7 +213,7 @@
                         
                                 </div>
                             </div>
-                            <h3 class="text-light miTituloEtiqueta">Brasil  <img  src="imagenes/bandera-brasil.PNG" alt="" width="13%"></h3>
+                            <h3 class="text-light miTituloEtiqueta"><a href="brasil.html">Brasil  </a><img  src="imagenes/bandera-brasil.PNG" alt="" width="13%"></h3>
                         </div>
                         <div class="row">
                             <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, deserunt! Eius modi libero nulla vitae inventore, fugiat eaque, quia illo nihil sint ad excepturi distinctio magnam harum, ex veritatis minima.</p>
