--- a/infoArgentina-1.html
+++ b/infoArgentina-1.html
@@ -13,7 +13,8 @@
         </style>
     </head>
     <body class="barraParrafoContenido">
-        <p style="color: yellow; text-align: justify; ">
+        <b style="color: yellow;">RIO WANDA:</b>
+        <div style="color: yellow;">
             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
              accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
@@ -26,6 +27,6 @@
              accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
              accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-        </p>
+        </div>
     </body>
 </html>
