--- a/brasil.html
+++ b/brasil.html
@@ -65,9 +65,22 @@
         </header>
         <!-- -------------------------Contenido-------------------------- -->
         <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <img class="img-fluid" src="imagenes_brasil/bandera-brasil.PNG" alt="Bandera de Brasil" title="Bandera de Basil">
+                    </div>
+                    <div class="col-6 text-center">
+                        <p class="miTitulo text-white text-center mt-4 display-5 fw-bold"><strong>BRASIL</strong></p>
+                        
+                    </div>
+                    <div class="col-3 text-end">
+                        <img class="img-fluid" src="imagenes_brasil/escudo-brasil.PNG" alt="Escudo de Brasil" title="Escudo de Brasil">
+                    </div>
+                    <p class="miTitulo text-white text-center mt-3 display-6 fw-bold"><strong>Destinos recomendados</strong></p>
+                </div>
+            </div>
             <div class="container-fluid">
-                <p class="miTitulo text-white text-center display-4 fw-bold"><strong>BRASIL</strong></p>
-                <p class="miTitulo text-white text-center display-6 fw-bold"><strong>Destinos recomendados</strong></p>
                 <div class="row">
                     <div class="col-6 text-center p-2">
                         <div class="imagenContenido">
@@ -75,7 +88,7 @@
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%" ></iframe>
+                                <iframe class="iframeParrafoContenido" src="info_brasil/infoBrasil_1.html" frameborder="0" width="100%" ></iframe>
 
                             </p>
                         </div>
@@ -93,7 +106,7 @@
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="info_brasil/infoBrasil_2.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -115,7 +128,7 @@
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="info_brasil/infoBrasil_3.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
@@ -133,7 +146,7 @@
                         </div>
                         <div>
                             <p class="parrafoContenido">
-                                <iframe class="iframeParrafoContenido" src="infoBrasil-1.html" frameborder="0" width="100%"></iframe>
+                                <iframe class="iframeParrafoContenido" src="info_brasil/infoBrasil_4.html" frameborder="0" width="100%"></iframe>
 
                             </p>
                         </div>
