--- a/info_argentina/infoArgentina_1.html
+++ b/info_argentina/infoArgentina_1.html
@@ -15,18 +15,9 @@
     <body class="barraParrafoContenido">
         <b style="color: yellow;">RIO WANDA:</b>
         <div style="color: yellow;">
-            <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+            <b>rio wanda:</b> este es un rio donde se pueden ver las maravillas de la naturaleza <br>
+            y donde se puede navegar por el rio para ver los paisajes de los alrededores esta en misiones y es un lugar hermoso para conocer  
+             <b></b>
         </div>
     </body>
 </html>
