--- a/info_argentina/infoArgentina_2.html
+++ b/info_argentina/infoArgentina_2.html
@@ -15,18 +15,14 @@
     <body class="barraParrafoContenido">
         <b style="color: yellow;">CATARATAS DEL IGUAZU:</b>
         <div style="color: yellow;">
-            <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+            <b>Las Cataratas del Iguazu</b> son un conjunto de cataratas ubicadas en el rio Iguazu en el limite entre la provincia de Argentina (Misiones)<b>
+            y el estado Brasilero (Parana) es una de las siete maravillas naturales del mundo.<br> 
+             <b>un lugar para relajarse y disfrutar de la naturaleza en todo su explendor rodeados de toda la naturaleza propia del lugar </b> 
+            
+            <b>las cataratas representan un refugio para algunos animales en peligro de extincion como el:yaguar,tapir,ocelote,tiricas,<br>
+            oso hormiguero,la yacutinga,aguilas selvaticas,el yacare ovejero etc.Por esta razon es que esta es un area protegida para la preservacion de las especies<br>
+                y esto lo hace a este lugar incluso mas hermoso.</b>
+            
         </div>
     </body>
 </html>
