--- a/info_argentina/infoArgentina_3.html
+++ b/info_argentina/infoArgentina_3.html
@@ -15,18 +15,9 @@
     <body class="barraParrafoContenido">
         <b style="color: yellow;">CERRO 14 COLORES:</b>
         <div style="color: yellow;">
-            <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+             <b>Un hermoso lugar con mucha altura para disfrutar.Llamado la serrania del hornocal pero mejor conocido como el cerro de 14 colores<br>
+            (no confundir con el cerro de los 7 colores)es uno de los atractivos turisticos de la quebrada de humahuaca que se encuentra en la provincia de jujuy</b><br>
+             <b>veni a disfrutar de esta majestuosa creacion de la naturaleza y disfrutar el silencio,es una experiencia unica y desestresante</b> 
         </div>
     </body>
 </html>
