--- a/info_argentina/infoArgentina_4.html
+++ b/info_argentina/infoArgentina_4.html
@@ -15,18 +15,8 @@
     <body class="barraParrafoContenido">
         <b style="color: yellow;">MINAS WANDA:</b>
         <div style="color: yellow;">
-            <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             <b>Lorem ipsum dolor:</b> sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, aperiam numquam? Consequatur in dolorum sit et 
-             accusantium doloribus pariatur rem nostrum, suscipit ipsum sequi cumque natus alias odio illum quae.
+            <b>Son un lugar con un visual increible donde se ven un monton de piedras presiosas se puede visitar durante todo el año.<br> En las minas wanda se realiza la venta de productos realizados con piedras semipresiosas<br> como las agatas,amatistas,topacios y varios tipos de cuarzos,<br>ademas de recorrer dentro de las minas<br>(por medio de un guia y teniendo todas las precauciones para evitar accidentes)y aprender sobre la historia del descubrimiento de estas.<br>Las minas de wanda estan ubicadas a pocos kilometros de las cataratas del iguazú.   </b>
+             <b></b> 
         </div>
     </body>
 </html>
